# movie-recsys-backend

./: .dockerignore  .env.example  .gitignore  Makefile  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
src/: app.py  config.py  constants.py  main.py  security.py
src/recommenders/: als_recommender.py  base.py  feature_processors.py  lightfm_recommender.py
src/utils/: database.py  logger.py  mock_user_features.py  recommender.py  rsa_keys_manager.py
src/utils/migrations/: env.py
src/utils/table_models/: models.py
