[tool.poetry]
name = "movie recsys"
version = "0.1.0"
description = ""
authors = ["MRossa <maxim.rossa@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
cryptography = "^44.0.0"
alembic = "^1.14.1"
rectools = {extras = ["lightfm", "torch"], version = "^0.12.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
